--- a/WCSTrainer/Pages/Employees/Details.cshtml
+++ b/WCSTrainer/Pages/Employees/Details.cshtml
@@ -34,7 +34,7 @@
                             <p class="title">Skills</p>
                         </div>
                         <div class="info-content">
-                            <p class="info">@Html.DisplayFor(model => model.Employee.EmployeeSkills)</p>
+                            <p class="info">@Html.DisplayFor(model => model.Employee.SkillIds)</p>
                         </div>
                     </div>
                     <div class="text-group">
@@ -50,7 +50,7 @@
                             <p class="title">Training Orders</p>
                         </div>
                         <div class="info-content">
-                            <p class="info">@Html.DisplayFor(model => model.Employee.TrainingOrders)</p>
+                            <p class="info">@Html.DisplayFor(model => model.Employee.TrainingOrderIds)</p>
                         </div>
                     </div>
                 </div>
