--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -29,14 +29,14 @@
                     <span asp-validation-for="Employee.Status" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Employee.TrainingOrders" class="control-label"></label>
-                    <input asp-for="Employee.TrainingOrders" class="form-control"/>
-                    <span asp-validation-for="Employee.TrainingOrders" class="text-danger"></span>
+                    <label asp-for="Employee.TrainingOrderIds" class="control-label"></label>
+                    <input asp-for="Employee.TrainingOrderIds" class="form-control" />
+                    <span asp-validation-for="Employee.TrainingOrderIds" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Employee.EmployeeSkills" class="control-label"></label>
-                    <input asp-for="Employee.EmployeeSkills" class="form-control" />
-                    <span asp-validation-for="Employee.EmployeeSkills" class="text-danger"></span>
+                    <label asp-for="Employee.SkillIds" class="control-label"></label>
+                    <input asp-for="Employee.SkillIds" class="form-control" />
+                    <span asp-validation-for="Employee.SkillIds" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
