--- a/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
@@ -46,7 +46,7 @@
                                         <td>@employee.FirstName @employee.LastName</td>
                                     }
                                 }
-                                <td>@Html.DisplayFor(modelItem => item.Skill)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Skills)</td>
                                 <td>@Html.DisplayFor(modelItem => item.Priority)</td>
                             </tr>
                             Model.listCount++;
