--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -18,7 +18,7 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <input type="hidden" asp-for="TrainingOrder.Id"/>
                         <input asp-for="TrainingOrder.Duration" type="hidden"/>
-                        <input asp-for="TrainingOrder.TrainerIds" type="hidden"/>
+                        <input asp-for="TrainingOrder.Trainers" type="hidden"/>
                         <input asp-for="TrainingOrder.TraineeId" type="hidden"/>
 
                         <input asp-for="TrainingOrder.CreateDate" type="hidden"/>
@@ -26,7 +26,7 @@
                         <input asp-for="TrainingOrder.LocationId" type="hidden" />
                         <input asp-for="TrainingOrder.EndDate" type="hidden"/>
                         <input asp-for="TrainingOrder.Medium" type="hidden"/>
-                        <input asp-for="TrainingOrder.Skill" type="hidden"/>
+                        <input asp-for="TrainingOrder.Skills" type="hidden"/>
 
                         <input asp-for="TrainingOrder.Status" type="hidden" value="Verified" />
 
@@ -36,7 +36,7 @@
                                     <p class="title">Trainers</p>
                                 </div>
                                 <div class="info-content">
-                                    <p class="info">@Model.TrainingOrder.TrainerIds</p>
+                                    <p class="info">@Model.TrainingOrder.Trainers</p>
                                 </div>
                             </div>
                         }
@@ -53,7 +53,7 @@
                                 <p class="title">Skill</p>
                             </div>
                             <div class="info-content">
-                                <p class="info">@Html.DisplayFor(model => model.TrainingOrder.Skill)</p>
+                                <p class="info">@Html.DisplayFor(model => model.TrainingOrder.Skills)</p>
                             </div>
                         </div>
                         @if (!Model.TrainingOrder.Status.Equals("Awaiting Approval")) {
