--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -23,7 +23,7 @@
                         <input asp-for="TrainingOrder.Duration" type="hidden"/>
                         <input asp-for="TrainingOrder.TraineeId" type="hidden"/>
                         <input asp-for="TrainingOrder.Medium" type="hidden"/>
-                        <input asp-for="TrainingOrder.Skill" type="hidden"/>
+                        <input asp-for="TrainingOrder.Skills" type="hidden"/>
 
                         <div class="form-group">
                             <div class="form">
@@ -60,7 +60,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <input id="trainersInput" asp-for="TrainingOrder.TrainerIds" type="hidden" />
+                                <input id="trainersInput" asp-for="TrainingOrder.Trainers" type="hidden" />
                             </div>
                         </div>
                         <div class="form-group">
