--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -33,21 +33,21 @@
                                 <div class="labels">
                                     <span asp-validation-for="TrainingOrder.TraineeId" class="text-danger"></span>
                                 </div>
-                                <div class="selections">
+                                 <div class="selections">
                                     <div class="btn bg-btn btnWhite" onclick="openComponent('trainees')"><p>Select Trainee</p></div>
                                     <ul id="trainee" class="pill-container">
                                     </ul>
-                                    <input id="traineeInput" asp-for="TrainingOrder.TraineeId" type="hidden" />
+                                    <input id="traineeInput" asp-for="TrainingOrder.TraineeId" />
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Skill*</p>
-                                    <span asp-validation-for="TrainingOrder.Skill" class="text-danger"></span>
+                                    <p class="control-label">Description*</p>
+                                    <span asp-validation-for="TrainingOrder.Description" class="text-danger"></span>
                                 </div>
-                                <textarea rows="4" asp-for="TrainingOrder.Skill" placeholder="Describe the skill being trained and the goal."></textarea>
+                                <textarea rows="4" asp-for="TrainingOrder.Description" placeholder="Describe the skill being trained and the goal."></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -56,7 +56,12 @@
                                     <p class="control-label">Location*</p>
                                     <span asp-validation-for="TrainingOrder.LocationId" class="text-danger"></span>
                                 </div>
-                                <select asp-for="TrainingOrder.LocationId" class="form-control" asp-items="@Model.Locations"></select>
+@*                                 <select asp-for="TrainingOrder.LocationId" class="form-control">
+                                    @foreach(var loc in Model.Locations) {
+                                        <option value="@loc.Id">@loc.Name</option>
+                                    }
+                                </select> *@
+                                <input asp-for="TrainingOrder.LocationId" class="form-control"/>
                             </div>
                             <div class="form">
                                 <div class="labels">
@@ -72,7 +77,7 @@
                                     <p class="control-label">Training Hours Needed</p>
                                     <span asp-validation-for="TrainingOrder.Duration" class="text-danger"></span>
                                 </div>
-                                <input asp-for="TrainingOrder.Duration" class="form-control"/>
+                                <input type="text" asp-for="TrainingOrder.Duration" class="form-control" />
                             </div>
                             <div class="form">
                                 <div class="labels">
